--- a/melvin-react-api-project/package.json
+++ b/melvin-react-api-project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-complex-json-app",
+  "name": "melvin-react-api-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
